--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,7 +1,10 @@
 %html
   %head
     %title Navege de forma mais simples nos seus rdocs :-)
-
+    %link{:rel => 'stylesheet', :type =>'text/css', :href => '/style.css' }
+    =link_js "jquery-1.3.2.min"
+    =link_js "jquery-ui-1.7.2.custom.min"
+    =link_js "main"
   %body
 
     %p
